test/compile_errors/err_null_not_integer.w
//! expect-check-fail: null is not an integer; use a typed pointer context

fn main:
    let n: i32 = null
